<resources>
    <string name="app_name">Car Valeting Management</string>
    <string name="addNewAppointment">Create a new entry here</string>
    <string name="menu_addCar">Add New Car</string>
    <string name="menu_deleteBooking">Delete</string>
    <string name="menu_cancelBooking">Cancel</string>
    <string name="carBrand">Car Brand Name (e.g. Ford)</string>
    <string name="carModel">Car Model (e.g. Fiesta)</string>
    <string name="go_to_calendar">Enter a Date</string>
    <string name="dateShown">Date</string>
    <string name="date">Date</string>
    <string name="numberPlate">Number Plate</string>
    <string name="standardService">Standard Service</string>
    <string name="premiumService">Premium Service</string>
    <string name="addNewCar">Book this Car</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="dateHint">Date</string>
    <string name="car_brand_hint">Car</string>
    <string name="car_model_hint">Car Model</string>
    <string name="license_plate_hint">License Plate</string>

    <!--All below is stuff from the fragments lab-->
    <!--todo change most of these-->
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Donation (Lab K07a)</string>
    <string name="nav_header_subtitle">voteforhomer@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Next 2 lines are important for the Nav_Drawer-->
    <!--todo change most of these-->
    <string name="book_a_car">Book a Car</string>
    <string name="show_bookings">Show Bookings</string>

    <string name="action_book">Book this Car</string>

    <string name="menu_favourites">Favourites</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <!--Next Line is from the Networking Lab-->
    <!--todo change most of these-->
    <string name="messageLoading">Please Wait while the Donations are Loading…</string>

    <!--All below is taken from authentication lab-->
    <!--todo change most of these-->
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <!--The below is taken from authentication lab todo change them-->
    <string name="action_edit">Edit Donation</string>
    <string name="action_update">Update</string>
    <string name="message_edit">Please Update your Details Below</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>